home.css
/* Profile */
#profileBox {
  box-sizing: border-box;
  width: 100%;
  height: fit-content;
  padding: 0px;
  display: grid;
  gap: 25px;
  justify-content: center;
}

#profileBox h2 {
  margin: 0px;
  text-align: center;
}
#profileBox hr {
  margin-top: 0px;
}
#colors {
  display: grid;
  grid-auto-flow: column;
  gap: 10px;
}
.selectDot {
  background-color: white;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  margin-left: auto;
  margin-right: auto;
  margin-top: 10px;
}
.colorOption {
  width: 50px;
  display: grid;
}
.colorOption img {
  width: 50px;
}
.inputfield {
  display: grid;
  width: 100%;
}
.inputfield h3 {
  box-sizing: content-box;
  background-color: white;
  color: black;
  margin: 0px auto 0px auto;
  width: fit-content;
  border-radius: 10px 10px 0px 0px;
  padding: 10px 10px 0px 10px;
  font-size: large;
}
.inputfield input {
  box-sizing: border-box;
  border-radius: 10px;
  width: 100%;
  height: 100%;
}

.selections {
  display: grid;
  gap: 10px;
  border: 5px white solid;
  padding: 10px;
  grid-auto-flow: column;
  justify-items: center;
  border-radius: 10px;
}
/*Main center*/
#homeLogo {
  height: 100px;
}
#mainBox {
  box-sizing: border-box;
  width: 100%;
  display: grid;
  place-items: Center;
  gap: 1rem;
  height: fit-content;
}
.title {
  margin-top: -30px;
}

#codeContainer {
  display: grid;
  grid-auto-flow: column;
  align-items: center;
  text-align: center;
  border: 5px white solid;
  border-radius: 10px;
  width: 70%;
}
#codeContainer input {
  border: none;
  border-radius: 10px;
  width: 100%;
}
#codeContainer button {
  box-sizing: border-box;
  height: calc(100% + 2px);
  width: calc(100% + 2px);
  background-color: white;
  border: none;
  border-radius: 0px;
}
/*Games*/
#openGames {
  width: 100%;
}
#divider {
  box-sizing: border-box;
  width: 80%;
  border: 2px solid white;
  margin-top: 75px;
  background-color: white;
}
#redcircle {
  display: none;
  position: fixed;

  left: -50px;
  top: 0;
  height: 100%;
  z-index: 0;
}

#gamesBox {
  text-align: center;
  width: 100%;
}
#gamesBox hr {
  margin: 0px auto 0px auto;
}
#gamesBox h2 {
  margin: 0px;
}
#openGamesContainer {
  margin: 0px;
  height: 500px;
  padding-top: 25px;
  overflow-x: hidden;
  overflow-y: scroll;
}
#openGamesContainer div {
  margin: 0px auto 10px auto;
  display: grid;
  grid-auto-flow: column;
  align-items: center;
  text-align: center;
  border: 5px white solid;
  border-radius: 10px;
  width: 70%;
  height: 50px;
  grid-template-columns: 2fr 1fr;
}
#openGamesContainer div p {
  margin: 0px;
}
#openGamesContainer div button {
  box-sizing: border-box;
  height: calc(100% + 2px);
  width: calc(100% + 2px);
  background-color: white;
  border: none;
  border-radius: 0px;
}
/*Other*/
#bottomButtons {
  bottom: 0px;
  top: auto;
}
#homeContainer {
  height: 100%;
  display: grid;
  width: 100%;
  gap: 10px;
  place-items: center;
  grid-auto-flow: column;
  grid-template-columns: repeat(3, 1fr);
}
.homePanel {
  margin: auto 0px auto 0px;
  padding: 10px;
  text-align: center;
}

@media (max-width: 1000px) {
  input {
    width: 80%;
  }
  #homeLogo {
    height: 80px;
  }
  #homeContainer {
    grid-template-columns: 1fr;
  }
  #codeContainer {
    width: 90%;
  }
}
@media (min-width: 1000px) {
  #bottomButtons {
    display: none;
  }
}
@media (max-height: 700px) {
  #divider {
    margin-top: 10px;
  }
  .title {
    margin-bottom: 0px;
  }
  #profileBox {
    gap: 10px;
  }
  #openGamesContainer {
    height: 400px;
  }
}

